# embodied-skill-composer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESEARCH_LOG.md  SECURITY.md  pyproject.toml  requirements-construction-rl.txt  requirements-construction.txt  requirements-pybullet.txt  requirements-rl-cuda-cu130.txt  requirements-rl.txt  requirements-routing-w9.txt  requirements-sim-coppelia.txt  requirements-sim-mujoco.txt  requirements.txt  run_project.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: ASSETS.md
configs/: assembly_env.yaml  assembly_obstacles.yaml  assembly_recovery.yaml  assembly_training.yaml  construction_asset_catalog.yaml  runtime.yaml  scene.yaml  tasks.yaml  warehouse_runtime.yaml  warehouse_scene.yaml  warehouse_tasks.yaml
constraints/: ci-py311-linux.txt
docs/: architecture-overview.md  architecture.md  construction-intelligence-v1-reproducibility.md  dependencies-and-assets.md  isaac-prep.md  research-landscape.md  roadmap.md  vision.md
scripts/: benchmark_assembly_policies.py  build_construction_skill_profile.py  capture_assembly_perception.py  check_coppelia_runtime.py  check_gpu_runtime.py  eval_assembly_options.py  eval_assembly_policy.py  evaluate_construction_intelligence.py  export_construction_public_demo.py  generate_construction_assets.py  manage_construction_runs.py  preview_construction_assets.py  quickstart.sh  run_assembly_experiment_sweep.py  run_benchmark.py  run_collection.py  run_construction_api.py  run_construction_brain.py  run_construction_coppelia.py  run_construction_marl_env.py  run_construction_workbench.py  run_copilot.py  run_coppelia_assembly.py  run_demo.py  run_dynamic_construction_coppelia.py  run_modular_construction.py  run_mujoco_assembly.py  scan_secrets.py  setup_cuda_torch_windows.ps1  setup_pybullet_backend.ps1  start_construction_workbench.ps1  train_assembly_marl.py  train_assembly_options.py  train_construction_intelligence.py  train_grasp_policy.py  visualize_assembly_episode.py
tests/: test_assembly_benchmark.py  test_assembly_env.py  test_assembly_experiments.py  test_assembly_tooling.py  test_assembly_training.py  test_benchmark.py  test_collection_integration.py  test_collection_perception.py  test_collection_planner.py  test_construction_brain.py  test_construction_dynamic_coppelia.py  test_construction_evaluation_coverage.py  test_construction_intelligence.py  test_construction_lab_api.py  test_construction_lab_durable.py  test_construction_lab_paths.py  test_construction_training_resume.py  test_construction_v2.py  test_copilot.py  test_coppelia_backend.py  test_coverage_hardening.py  test_executor.py  test_integration.py  test_manipulation_recovery.py  test_modular_blueprint.py  test_mujoco_attachment.py  test_obstacle_construction.py  test_physical_sensing.py  test_planner.py  (+1 more)
(+124 files in other folders)
