[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-skill-composer"
version = "0.1.0"
description = "Simulation-first robotics project for skill composition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8,<4",
    "networkx>=3.2,<4",
    "numpy>=1.26,<3",
    "openai-agents>=0.17,<1",
    "pydantic>=2.7,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.7,<3",
    "mypy>=1.10,<2",
    "pip>=25,<27",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.5,<1",
    "setuptools>=68,<82",
    "types-PyYAML>=6.0,<7",
    "uv==0.10.0",
    "wheel>=0.45,<1",
]
construction = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "opencv-python-headless>=4.10,<5",
    "ortools>=9.12,<10",
    "python-multipart>=0.0.18,<1",
    "shapely>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]
construction-rl = [
    "gymnasium==1.3.0",
    "onnx>=1.19,<2",
    "onnxscript>=0.5,<1",
    "pettingzoo==1.26.1",
    "tensorboard>=2.20,<3",
    "tensordict==0.13.0",
    "torchrl==0.13.3",
]
rl = ["torch==2.11.0"]
pybullet = ["pybullet>=3.2.6,<4"]
routing-w9 = ["w9-pathfinding==0.1.3"]
sim-coppelia = [
    "coppeliasim-zmqremoteapi-client>=2.0,<3",
    "imageio>=2.37,<3",
]
sim-mujoco = [
    "imageio>=2.37,<3",
    "imageio-ffmpeg>=0.6,<1",
    "mujoco>=3.7,<4",
    "opencv-python-headless>=4.10,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["embodied_skill_composer"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
